--- a/content/thoughts/2023-11-10 seeds.md
+++ b/content/thoughts/2023-11-10 seeds.md
@@ -4,9 +4,9 @@ date: 2023-11-10
 tags:
   - seeds
 ---
-I am again beginning. I am writing in a voice that isn't me. I can only be truly write well if I have lived a coherent life.
+I am again beginning. I am writing in a voice that isn't me. I can only truly write well if I have lived a coherent life.
 
-Look at the people who listen to you and who genuinely needs your help as your ministry:
+Look at the people who listen to you and who genuinely need your help as your ministry:
 - the weekly readers of TLW.
 - Toby
 - Ka Icktoy
