--- a/content/thoughts/2023-11-12 seeds.md
+++ b/content/thoughts/2023-11-12 seeds.md
@@ -16,7 +16,7 @@ The vision:
 
 I dream of a world where selves are allowed to self-actualize to be as free as possible to listen to their true selves and pursue a free, creative way of life.
 
-I dream of a cooperative society where social structures are in place to maximize true freedom of all together while being mindful of the interconnectedness of everythingz
+I dream of a cooperative society where social structures are in place to maximize true freedom of all together while being mindful of the interconnectedness of everything.
 
 I dream of a world where human, non-humans, and nature become one, where love and compassion flows.
 
