--- a/content/thoughts/2023-11-19 seeds.md
+++ b/content/thoughts/2023-11-19 seeds.md
@@ -8,6 +8,6 @@ tags:
 
 I am less interested about metaphysics and epistemology as I was before. I am now more focused on practice: practice of meditation, writing, compassion, being open to what happens within and around me.
 
-I do nor reject the importance of metaphysics and epistemology as Nietzsche proposed. I think they are important and useful and I have a feeling that I wil return to them down the road.
+I do not reject the importance of metaphysics and epistemology as Nietzsche proposed. I think they are important and useful and I have a feeling that I will return to them down the road.
 
 But I am minimalist in my beliefs anyway that I don't think I am in too much danger of creating harm to other because of duplicity. If I have a complex worldview that involves the supernatural and the postmodern then I should be more wary. But since I don't have this, I might have more freedom to let go of metaphysics and epistemology at least for now.
