--- a/content/thoughts/2023-11-24 seeds.md
+++ b/content/thoughts/2023-11-24 seeds.md
@@ -34,7 +34,7 @@ Walking
 - when walking is used as a method, you can either let the different images dictate what is next then stop and write about what catches you on that very moment or revisit your notes after the walk. The converging happens after, the jumping and diverging has happened during the walk.
 - Of course, sometimes converging is sometimes let go altogether
 
-Photography could be an even more gnenerous media for this aesthetic.
+Photography could be an even more generous media for this aesthetic.
 
 Writing
 - mention Billy Collins' process
