--- a/content/essays/uman 2023-11.md
+++ b/content/essays/uman 2023-11.md
@@ -5,6 +5,8 @@ tags:
   - evergreens
 draft: false
 ---
+![An island](essays/images/island.jpg)
+
 A trip to Baguio last October left me in a tunnel filled with doubts about where I was heading. I wanted November to show me the way out. I knew I needed help, so I typed the URL of [[thoughts/andrew j. brown|Andrew James Brown's]] website, navigated to the contact form, and pasted the message I drafted on my note-taking app.
 
 Andrew, the first religious minister I ever paid attention to since 2012, is an atheist, and yet he leads a church in the United Kingdom. I was wandering around the spiritual wilderness for more than a decade, but I've never heard about an atheist pastor. I would later learn that atheism is prevalent even among many conservative churches, but it is especially welcomed and nurtured in the liberal religious movement called [[Unitarianism]]. If there is any way for me to reconcile my past as a devout JW with my heavily secular and agnostic present, a necessity I discovered I had to do after [[essays/traversing liminality through walking|a relatively long walk last year]], that way would be found only within liberal religion.
@@ -24,6 +26,8 @@ Imaoka didn't leave us a clear definition of free religion, so it can be challen
 However, the absence of a clear definition of free religion should be seen as an asset of the idea: anyone learning about it could create their own interpretation. I did this through my essay [[essays/a goodness lurking|"A Goodness Lurking: The Quest for a Free, Subsistent Spirituality]]." 
 
 The way I understand it, religion and spirituality should always be free or, at the very least, aspire for freedom. Therefore, free religion will always be the ideal. For religion to be free, however, it has to be deeply personal. Although this is all semantics, using the word "spirituality" makes the subject more personal. Spirituality should be as simple and prevalent as possible. It has to be seen in as many human endeavors as possible, so I am partial to the idea that spirituality is simply an attitude of deeply caring about something. It is an attitude expressed and cultivated through different spiritual practices.
+
+![Leaf shadows](essays/images/leaf-shadows.jpg)
 
 ## Writing as Ministry
 
@@ -70,3 +74,5 @@ For now, here's a journal entry I wrote about this:
 >This is grit. Doing it not out of joy but out of belief. The world is not here to make you happy. It is not here to serve you. It is here to slap you on the face so you can see happiness lurking behind the moss-covered crevices of your soul. To pursue only things that make you happy is hollow—hollow as the cage that it is.
 >
 >Therefore, the first principle is to believe that this world is worth walking, no matter how bleak the evidence for it. The practice is to simply wake up in the morning and trust. This is all the work that has to happen. A journal entry begins with faith and ends with joyful expectation.
+
+![Sun-kissed plants](essays/images/sunkissed-plants.jpg)
