--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -40,7 +40,7 @@ draft: true
 [[2023-11-18]]: Updates for [[thoughts/my workview|my workview]] and [[thoughts/my lifeview|my lifeview]]
 [[2023-11-19]]: Draft of [[essays/whats next for the long walk|whats next for the long walk]]
 
-[[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[projects/a walk around lb]]
+[[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[projects/roots x gravel/a walk around lb]]
 
 [[2023-11-24]]: Draft of [[essays/a goodness lurking|A Goodness Lurking]]
 [[2023-11-25]]: Continuation of draft for A Goodness Lurking
