--- a/content/thoughts/2022-09-22 seeds.md
+++ b/content/thoughts/2022-09-22 seeds.md
@@ -1,11 +1,11 @@
 ---
-title: "2022-09-22 seeds"
-date: "2022-09-23"
+title: 2022-09-22 seeds
+date: 2022-09-23
+aliases:
+  - 2022-09-22 seeds
 tags:
-
-- "seeds"
+  - seeds
 ---
-
 - [[Choosing to believe and live by an ideal requires faith]]
 
 ---
