--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -41,10 +41,11 @@ draft: true
 [[2023-11-19]]: Draft of [[essays/whats next for the long walk|whats next for the long walk]]
 [[2023-11-20]]: [[vignettes/on my desk my fingers walk|on my desk my fingers walk]]
 [[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[projects/roots x gravel/a walk around lb]]
-
+[[2023-11-23]]: [[thoughts/some rules on sharing the road with others]]
 [[2023-11-24]]: Draft of [[essays/a goodness lurking|A Goodness Lurking]]
 [[2023-11-25]]: Continuation of draft for A Goodness Lurking
 [[2023-11-26]]: Continuation of draft for A Goodness Lurking
 
 [[2023-12-01]]: A recap of November and some intentions for December 2023
 [[2023-12-02]]: Some thoughts on how to do the upcoming weeklong walk at LB
+[[2021-12-03]]: Draft of intro to [[projects/roots x gravel/a walk around lb|a walk around lb]]
