--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -48,4 +48,7 @@ draft: true
 
 [[2023-12-01]]: A recap of November and some intentions for December 2023
 [[2023-12-02]]: Some thoughts on how to do the upcoming weeklong walk at LB
-[[2021-12-03]]: Draft of intro to [[projects/roots x gravel/a walk around lb|a walk around lb]]
+[[2023-12-03]]: Draft of intro to [[projects/roots x gravel/a walk around lb|a walk around lb]]
+
+[[2023-12-14]]: How to prepare for my call with Andrew
+[[2023-12-15]]: Reflections after my call with Andrew
