--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -94,7 +94,7 @@ draft: true
 [[2019-12-21]]: [[my experience of grief]]; drawing with my eyes closed
 [[2019-12-22]]: [[essays/my hero books of 2019]]; spiral hand drawing
 [[2019-12-23]]: What do I need to get better?; Brunetti Style Self-portrait
-[[2019-12-24]]: [[literature/bird by bird lamott|Bird by Bird by Anne Lamott]]; [[literature/ultralearning young|Ultralearning by Scott Young]]; [[literature/devotions oliver|Devotions by Mary Oliver]]; [[literature/belong agrawal|Belong by Radha Agrawal]]; Drawing of different characters
+[[2019-12-24]]: [[lms/literature/bird by bird lamott|Bird by Bird by Anne Lamott]]; [[lms/literature/ultralearning young|Ultralearning by Scott Young]]; [[lms/literature/devotions oliver|Devotions by Mary Oliver]]; [[lms/literature/belong agrawal|Belong by Radha Agrawal]]; Drawing of different characters
 [[2019-12-25]]: Xmas day; Daily diary by Lynda Barry; Self-portrait as a sexy gecko; Meditations Book 9
 [[2019-12-26]]: A late entry; Meditations Book 10
 [[2019-12-27]]: My thoughts on why I was sad yesterday
