--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -94,17 +94,17 @@ tags:
 [[2023-07-15]]: Notes for improving the articulation of [[thoughts/my poetics|my poetics]]; no need for a life plan if the LMS is doing its work
 [[2023-07-16]]: More ideas to include into [[thoughts/my poetics|my poetics]]
 [[2023-07-17]]: [[poems/manuwal sa pagpigil ng umaga|Manuwal sa Pagpigil ng Umaga]]
-[[2023-07-19]]: Thoughts on approaching the Claire situation with the intention of fixing; analysis of Fog in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-20]]: Analysis of Cornerhouse in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-21]]: Analysis of Market in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; [[walk poem]]
+[[2023-07-19]]: Thoughts on approaching the Claire situation with the intention of fixing; analysis of Fog in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-20]]: Analysis of Cornerhouse in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-21]]: Analysis of Market in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; [[walk poem]]
 [[2023-07-22]]: Current challenges of my life
-[[2023-07-23]]: Analysis of If You Can't See My Mirrors I Can't See You in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-24]]: How reading [[thoughts/melt the snowflake at once by david rothenberg|Melt the Snowflake at Once by David Rothenberg]] helped me remember that lyrical philosophy is what I want to create; Revisions in Ili's website copy; Analysis of Poetry is Read on Faces in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-25]]: [[poems/in july|In July]]; Analysis of Ferrante & Teicher in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; some ideas on improving [[thoughts/my worldview|my worldview]]; Given the kind of writing I want to produce, what's the best way to produce it?
-[[2023-07-26]]: A celebration of this moment; Analysis of Making Scenes in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; a bit of an idea for [[thoughts/my poetics|my poetics]]
-[[2023-07-27]]: Some insights on [[thoughts/understanding|understanding]]; Analysis of Short Walks in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-28]]: Analysis of Static in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-29]]: [[mindfulness over analysis]]; Analysis of Cafe in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-23]]: Analysis of If You Can't See My Mirrors I Can't See You in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-24]]: How reading [[thoughts/melt the snowflake at once by david rothenberg|Melt the Snowflake at Once by David Rothenberg]] helped me remember that lyrical philosophy is what I want to create; Revisions in Ili's website copy; Analysis of Poetry is Read on Faces in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-25]]: [[poems/in july|In July]]; Analysis of Ferrante & Teicher in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; some ideas on improving [[thoughts/my worldview|my worldview]]; Given the kind of writing I want to produce, what's the best way to produce it?
+[[2023-07-26]]: A celebration of this moment; Analysis of Making Scenes in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; a bit of an idea for [[thoughts/my poetics|my poetics]]
+[[2023-07-27]]: Some insights on [[thoughts/understanding|understanding]]; Analysis of Short Walks in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-28]]: Analysis of Static in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
+[[2023-07-29]]: [[mindfulness over analysis]]; Analysis of Cafe in [[lms/literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
 [[2023-07-30]]: Additional thoughts on [[thoughts/presence is the foundation|presence is the foundation]]; [[poems/those stairs at bakakeng|Those Stairs at Bakakeng]]
 [[2023-07-31]]: I could do a better job in [[thoughts/ethics|ethics]]; putting [[thoughts/philosophy|philosophy]], [[thoughts/contemplation|contemplation]], and [[thoughts/ethics|ethics]] under [[thoughts/understanding|understanding]].
 
