--- a/content/essays/uman 2023-09.md
+++ b/content/essays/uman 2023-09.md
@@ -38,8 +38,8 @@ The best quote I encountered in September is from Andrew Anabi:
 >Therefore, the best way to cherish life is to remind yourself of life's impermanence. It is to remember that every time you see someone that is one less time you see them. It is to remember that every time you go somewhere that is one less time you visit. By doing this, you naturally slow down. Almost like a reflex, you start to truly live.
 
 The best things I read this month were:
-- [[literature/lynda barry kios|Lynda Barry Will Make You Believe in Yourself by Dan Kios]]
-- [[literature/nightingalingale by mod|The Nightingalingale Newsletter by Craig Mod]]
+- [[lms/literature/lynda barry kios|Lynda Barry Will Make You Believe in Yourself by Dan Kios]]
+- [[lms/literature/nightingalingale by mod|The Nightingalingale Newsletter by Craig Mod]]
 
 # Newsletters
 
@@ -59,7 +59,7 @@ Whether you get in or not (highly likely you won't), you were able to move a per
 
 I used this newfound perspective in approaching the submission process to the Gawad Bienvenido Lumbera (GBL), a literary contest that recently ended its acceptance period.
 
-I sent a collection of my best 12 poems in Pangasinan. I began the project with the assumption that I would lose. Then, I used the application processes to force me to do work and teach myself writing. For this contest, it was about learning poetry, particularly revising it. To prepare for my entry, I chose the best Pangasinan anlong (poems) in my [[thoughts/my forest garden of the mind|Talahardin]]. I started with seven, the minimum number set by the contest guidelines, but later added five more when I accidentally discovered the collection theme. I called the collection Kasabi Kaagwan or When Noon Comes, thus the number 12. After selecting the poems, I created a [[thoughts/poem revision process|poem revision process]] based on [[literature/billy collins masterclass|Billy Collins' Masterclass]] and used it to improve each poem in the collection.
+I sent a collection of my best 12 poems in Pangasinan. I began the project with the assumption that I would lose. Then, I used the application processes to force me to do work and teach myself writing. For this contest, it was about learning poetry, particularly revising it. To prepare for my entry, I chose the best Pangasinan anlong (poems) in my [[thoughts/my forest garden of the mind|Talahardin]]. I started with seven, the minimum number set by the contest guidelines, but later added five more when I accidentally discovered the collection theme. I called the collection Kasabi Kaagwan or When Noon Comes, thus the number 12. After selecting the poems, I created a [[thoughts/poem revision process|poem revision process]] based on [[lms/literature/billy collins masterclass|Billy Collins' Masterclass]] and used it to improve each poem in the collection.
 
 Like I said, I am pretty sure I won't win any awards, but I have 12 poems that are now way better than when I first wrote them (way, way better!). Plus, my revision skills are now sharper. These two rewards for me are enough.
 
