--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -11,7 +11,7 @@ draft: true
 [[2023-10-19]]: Re-read [[lms/annual review|annual reviews]] to remind you of how much you've accomplished since leaving the JWs; Accomplishments over the past six months
 [[2023-10-20]]: Draft of my email to [[thoughts/andrew j. brown|Andrew J. Brown]]
 [[2023-10-22]]: [[leaves]]
-[[2023-10-23]]: [[projects someday/a book about los baños|A book about Los Baños]] but made of devotional poems like [[literature/being home norris and sibley|Being Home]]; Models for integrating work and art
+[[2023-10-23]]: [[projects someday/a book about los baños|A book about Los Baños]] but made of devotional poems like [[lms/literature/being home norris and sibley|Being Home]]; Models for integrating work and art
 [[2023-10-24]]: [[thoughts/financial lessons|financial lessons]]
 [[2023-10-25]]: Using "You" to refer to God, the divine in oneself, or the collection of everything that exists; [[thoughts/self|self]] as a river
 [[2023-10-26]]: Not fame as a writer but use writing for spirituality; Being Home meditation on standing
@@ -33,7 +33,7 @@ draft: true
 [[2023-11-10]]: [[thoughts/doubt|doubt]]
 [[2023-11-11]]: Writing as competition is hurting me; Current life as free religion ministry; People I can minister to; [[thoughts/my ministry|my ministry]]; Plans on instituting ministry; Free religion as answer to the question of how to be a pastor without religion
 [[2023-11-12]]: Why I'm a descendant of the transcendentalists
-[[2023-11-13]]: Bitten by ants while reading [[literature/literary transcendentalism buell|literary transcendentalism buell]] at Carillion; the connection between [[thoughts/free religion|free religion]] and [[thoughts/transcendentalism|transcendentalism]]; inspiration vs. craft; [[writing is meditation]]; ministry as poet-priest; using arts (primarily writing) to help other embrace a free, creative spirituality
+[[2023-11-13]]: Bitten by ants while reading [[lms/literature/literary transcendentalism buell|literary transcendentalism buell]] at Carillion; the connection between [[thoughts/free religion|free religion]] and [[thoughts/transcendentalism|transcendentalism]]; inspiration vs. craft; [[writing is meditation]]; ministry as poet-priest; using arts (primarily writing) to help other embrace a free, creative spirituality
 [[2023-11-14]]: Writing as ministry; more ideas about [[thoughts/spiritual writing|spiritual writing]]; my work, play, love, and health dashboard
 [[2023-11-15]]: First group seiza session with Miki Nakura via Zoom; Formal invitation to create a moai; Consider returning to IG
 [[2023-11-17]]: [[vignettes/mount makiling trail|Mount makiling trail]]
@@ -50,5 +50,6 @@ draft: true
 [[2023-12-02]]: Some thoughts on how to do the upcoming weeklong walk at LB
 [[2023-12-03]]: Draft of intro to [[projects/roots x gravel/a walk around lb|a walk around lb]]
 
+[[2023-12-13]]: Solving the latest Lea money skafu
 [[2023-12-14]]: How to prepare for my call with Andrew
 [[2023-12-15]]: Reflections after my call with Andrew
