--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -53,3 +53,5 @@ draft: true
 [[2023-12-13]]: Solving the latest Lea money skafu
 [[2023-12-14]]: How to prepare for my call with Andrew
 [[2023-12-15]]: Reflections after my call with Andrew
+
+[[2023-12-21]]: [[vignettes/gilitan|gilitan]]
