--- a/content/thoughts/2023-04-01 seeds.md
+++ b/content/thoughts/2023-04-01 seeds.md
@@ -1,11 +1,11 @@
 ---
-title: "2023-04-01 seeds"
-date: "2023-04-01"
+title: 2023-04-01 seeds
+date: 2023-04-01
+aliases:
+  - 2023-04-01 seeds
 tags:
-
-- "seeds"
+  - seeds
 ---
-
 - [[Walking is a symptom]]
 
 Ang paglalakad ay sintomas
