--- a/content/thoughts/2023-11-17 seeds.md
+++ b/content/thoughts/2023-11-17 seeds.md
@@ -21,4 +21,4 @@ At ang araw pagkatapos ng bukas
 Ako ang sandaling ito na dito rin magwawakas
 
 ***
-Unitarianism is primarily an openness to a plural world, a diverse world, and a genuine curiosity to all beliefs and perspectives. A unitian's commitment to a certain belief is not more than his commitment to the possibility of a plural, free society.
+Unitarianism is primarily an openness to a plural world, a diverse world, and a genuine curiosity to all beliefs and perspectives. A unitarian's commitment to a certain belief is not more than his commitment to the possibility of a plural, free society.
