--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -55,3 +55,5 @@ draft: true
 [[2023-12-15]]: Reflections after my call with Andrew
 
 [[2023-12-21]]: [[vignettes/gilitan|gilitan]]
+
+[[2023-12-31]]: Genre-less writing; 2024 as the year to write the book about LB; Reflections on the nagging mom outside my window
