--- a/content/essays/uman 2023-10.md
+++ b/content/essays/uman 2023-10.md
@@ -78,10 +78,10 @@ I remembered Rem.
 
 ## Books
 
-On October, I finished reading [[lms/literature/refusing heaven by jack gilbert|Refusing Heaven by Jack Gilbert]], which I enjoyed.
+On October, I finished reading [[literature/refusing heaven by jack gilbert|Refusing Heaven by Jack Gilbert]], which I enjoyed.
 
-I started reading [[lms/literature/the existentialists survival guide marino|The Existentialist's Survival Guide by Marino]] and [[lms/literature/bluets nelson|Bluets by Nelson]].
+I started reading [[literature/the existentialists survival guide marino|The Existentialist's Survival Guide by Marino]] and [[literature/bluets nelson|Bluets by Nelson]].
 
-In the morning, I read and savor one meditation from [[lms/literature/being home norris and sibley|Being Home by Norris and Sibley]], a book I borrowed from Rem's library.
+In the morning, I read and savor one meditation from [[literature/being home norris and sibley|Being Home by Norris and Sibley]], a book I borrowed from Rem's library.
 
 ![Two children reading books while on bed](essays/images/nieces.jpg)
