--- a/content/essays/uman 2023-11.md
+++ b/content/essays/uman 2023-11.md
@@ -19,7 +19,7 @@ Practicing seiza for a month has taught me a lot about being mindful of my postu
 
 ## Shinichiro Imaoka (1881–1988)
 
-Andrew also advised looking into the life of [[thoughts/shinichiro imaoka|Shinichiro Imaoka (1881–1988)]], dubbed the Emerson of Japan and the proponent of a uniquely Eastern liberal religious concept called "[[thoughts/free religion|free religion]]." Imaoka was raised a Pureland Buddhist but later converted to Anglicanism, Congregationalism, and Unitarianism before embracing his spiritual philosophy of free religion. Imaoka's life and conversions were detailed in a biography by George Williams called [[lms/literature/cosmic sage williams|Cosmic Sage]].
+Andrew also advised looking into the life of [[thoughts/shinichiro imaoka|Shinichiro Imaoka (1881–1988)]], dubbed the Emerson of Japan and the proponent of a uniquely Eastern liberal religious concept called "[[thoughts/free religion|free religion]]." Imaoka was raised a Pureland Buddhist but later converted to Anglicanism, Congregationalism, and Unitarianism before embracing his spiritual philosophy of free religion. Imaoka's life and conversions were detailed in a biography by George Williams called [[literature/cosmic sage williams|Cosmic Sage]].
 
 Imaoka didn't leave us a clear definition of free religion, so it can be challenging to explain the concept. However, reading and reflecting on [[imaoka creed of life|Imaoka's Creed of Life]] helps one understand free religion better. It is what I did per Andrew's advice.
 
@@ -47,13 +47,13 @@ In my journal entry dated [[2023-11-23]], I began to dream:
 
 And so, I asked: why not convert writing itself into a form of ministry? I liked the sound of this idea. But how does one convert writing into a form of ministry?
 
-The first thing I did was to return to spiritual writing. Spiritual writing is something widely explored by the [[thoughts/transcendentalism|American Transcendentalists]], a group led by no other than Emerson himself, Imaoka's hero of free religion. According to Lawrence Buell in his book [[lms/literature/literary transcendentalism buell|Literary Transcendentalism]], one of the things the transcendentalists explored in the nineteenth century was how writing can both be a tool to go deeper into transcendentalism (i.e., to live a unique ethical life) and a vehicle to express the creative genius they believe reside within every human being.
+The first thing I did was to return to spiritual writing. Spiritual writing is something widely explored by the [[thoughts/transcendentalism|American Transcendentalists]], a group led by no other than Emerson himself, Imaoka's hero of free religion. According to Lawrence Buell in his book [[literature/literary transcendentalism buell|Literary Transcendentalism]], one of the things the transcendentalists explored in the nineteenth century was how writing can both be a tool to go deeper into transcendentalism (i.e., to live a unique ethical life) and a vehicle to express the creative genius they believe reside within every human being.
 
 These goals make sense. For writing to become a spiritual and religious practice, it has to help one strengthen one's spirituality while simultaneously helping one express that spirituality through words.
 
 Something was missing here, though. What the transcendentalists did with writing was turn it into a spiritual practice. But it wasn't necessarily a ministry. A ministry is a service; one must identify who to minister to. Although I love the solitary experience of writing and the challenge of improving my craft, I missed working directly with people, something I did with the Deaf in the past. How can I convert writing into a ministry that allows me to experience a similar direct connection with others?
 
-Enter [[Pat Schneider]]. I discovered her after her book *How the Light Gets In* appeared in my research on spiritual writing. While reading the Wikipedia entry about her, I learned that she developed a relatively popular writing method known as the Amherst Writers and Artists (AWA) method after the group that Schneider started. The technique was detailed in Schneider's book [[lms/literature/writing alone and with others schneider|Writing Alone and with Others]], which I am currently reading. I have yet to finish it, but I am starting to agree with Peter Below, who wrote the Foreword of the book when he said that Schneider might be "the wisest teacher of writing I know."
+Enter [[Pat Schneider]]. I discovered her after her book *How the Light Gets In* appeared in my research on spiritual writing. While reading the Wikipedia entry about her, I learned that she developed a relatively popular writing method known as the Amherst Writers and Artists (AWA) method after the group that Schneider started. The technique was detailed in Schneider's book [[literature/writing alone and with others schneider|Writing Alone and with Others]], which I am currently reading. I have yet to finish it, but I am starting to agree with Peter Below, who wrote the Foreword of the book when he said that Schneider might be "the wisest teacher of writing I know."
 
 Schneider used the AWA writing method in creating writing groups for writers from different walks of life and writing workshops for those who wanted to deepen their craft. What interests and inspires me the most is that Schneider started writing groups for low-income women and children and those in prison. Schneider passionately believes that everyone is a writer and that writing is a powerful method for self-actualization for all.
 
