--- a/content/thoughts/2023-12-17 seeds.md
+++ b/content/thoughts/2023-12-17 seeds.md
@@ -6,7 +6,7 @@ tags:
 ---
 Dog deter me from walking
 
-Carolling a family sith full costume and radio
- 2 boys carolling frightened with a dog but increased their volume
+Caroling a family with full costume and radio
+ 2 boys caroling frightened with a dog but increased their volume
 
-Students fill inside siento
+Students fill inside Siento
