--- a/content/essays/uman 2023-12.md
+++ b/content/essays/uman 2023-12.md
@@ -87,3 +87,5 @@ Here's a sample of one of his shorter vignettes, which illustrates the formula:
 >When I imagine the peninsula as a god itself, I see a creature for whom it's as easy to summon a thing into being as it is for us to say a word. The peninsula desires a shack and by that desire — of earth and rock and worm and leech — a shack manifests. The peninsula desires an abandoned barn, and there it is, as it always has been, for as long as the peninsula wants it to be.
 >
 >As a kid, the whole world felt preordained, immutable. Everything about the old town simply was, always had been, and always would be. There was no old town without Bryan. Of *course* he was there. Of *course* we met. This was the way it was meant to happen. Some God of airplane engine factories ordained it, and thus from the tobacco fields we rose.
+
+Overall, TBOT was a beautiful and instructive book to read, and anyone who aspires to write about and through walking would find it an excellent addition to their library. It gave me some ideas on how to approach my walking projects moving forward, including a book about my walks in Los Baños, which I hope to start writing this 2024, and a walk around Baguio City, which I plan on doing a few days from now.
