--- a/content/essays/uman 2023-12.md
+++ b/content/essays/uman 2023-12.md
@@ -5,25 +5,26 @@ tags:
   - evergreens
 draft: false
 ---
-When we entered Raymundo Gate, a teenager wearing a cap, a shirt, and leggings stood on the side of Velasco Ave. It's now almost six, and the light just broke out after a long night.
+![White camp houses under trees behind a grass field](essays/images/20231210-083712-rxg-camp-houses.jpg)
 
-Two other youngsters walked out of the College of Economics and Management buildings and are going toward our direction. Pieces of tarp held by golden pins hung on the front of their shirts. The tarps had numbers printed on them, and one of the teenagers handed one of these tarps to their friend waiting on the side of the road.
+When we entered Raymundo Gate, a girl wearing a cap, a shirt, and leggings stood on the side of Velasco Ave. It's now almost six, and the light just broke out after a long night.
+
+Two other youngsters walked toward our direction. Pieces of tarp held by golden pins hung on the front of their shirts. The tarps had numbers printed on them, and one of the teenagers handed a tarp to the girl waiting on the side of the road.
 
 "Make haste. The race would begin soon," I told my partner.
 
-We walked Aglibut Ave., Cuzner Ave., Mondonedo Ave., and Roxas Street (faster than usual) before passing by the Vet Med buildings that would take us to the Copeland Gymnasium in no time. From afar, we heard upbeat music frequently interrupted by the equally cheery voices of two hosts.
+We walked Aglibut Ave., Cuzner Ave., Mondonedo Ave., and Roxas Street faster than usual before passing by the Vet Med buildings that would take us to the Copeland Gymnasium in no time. From afar, we heard upbeat music frequently interrupted by the cheery voices of two hosts.
 
 "Fur babies and their parents, the race is starting in ten minutes!" a host announced. Our steps got faster.
+***
 
--
-
-We signed up for the one-kilometer pet race because we wanted to bring Carillon, the calico kitten (now a full-grown cat) that we picked up from the Carillon Tower just a few meters away last year. Carillon was too afraid to leave the house, so we decided to join our friends, who were bringing their two dogs with them for the race.
+We signed up for the one-kilometer pet race because we wanted to bring Carillon, the calico kitten (now a full-grown cat) that we picked up from the Carillon Tower just a few meters away last year. Carillon was too afraid to leave the house, so we decided to join our friends, who were bringing their two dogs with them to the race.
 
 That morning was hands down one of the best mornings of my life. From the moment we arrived around six until we left about eight in the morning, the smile on my face never faded. Being surrounded by that many dogs of different sizes and breeds made me feel something genuine and unpretentious—something I've never felt in a long time. Interestingly, the owners, who were as diverse as their dogs, all seemed to be kind and beautiful human beings. Everyone was approaching everyone, asking about their fur babies, stroking every pet's fur, and smiling, just smiling.
 
 I'm not a morning person, but I'm delighted I woke up early.
 
--
+***
 
 December 2023, the last month of a good year, was filled with opportunities to commune with strangers and to experience through this communion something similar to what I felt that morning.
 
@@ -49,6 +50,8 @@ One of the many challenges of walking, especially on busy roads, is sharing the 
 
 During Roots x Gravel, I walked all but one barangay of Los Baños: Bagong Silang. About two weeks after the project ended, I published an essay about my first solo walk of Bagong Silang last November 2023. That essay was entitled "[[essays/and i shall hear their hearts beating|And I Shall Hear Their Hearts Beating]]."
 
+![Man with a cap waling on the sidewalk](essays/images/20231206-111406-rxg-walking-man.jpg)
+
 # Photographic Re-walking
 
 Because I put a lot of time into my writing in 2023, my photography has suffered. Roots x Gravel allowed me to return to photography, practice the craft, and rethink my systems. With my photo library growing because of these walks, a photo backup system should be in place. After listening to advice online, I invested in a 2TB Sandisk external SSD to serve as the primary storage of my photo archive. I then backed this archive up in the cloud through my Backblaze account.
@@ -56,6 +59,8 @@ Because I put a lot of time into my writing in 2023, my photography has suffered
 Next, I invested several hours going through my existing photographs, culling the albums, adding metadata, adding keywords, adding GPS coordinates, and renaming the best ones. While doing these, I had to return to photographs I took last year during [[essays/a never-ending walk|my long walk from Los Baños to San Pablo]]. Returning to these photographs, I noticed, was almost like re-walking that route. Especially when fixing the GPS coordinates of the photos, I learned new things about the walk I never knew before, such as what barangays I passed by during the walk.
 
 With the help of a mentor, I was also able to think about ways to print my photos and what lenses to consider buying for future projects. In photography, as in writing and spirituality, a good archetype to follow, such as a mentor, a friend, or a teacher, could accelerate the deepening of one's practice.
+
+![Two boats on dock overlooking a mountain](essays/images/20220610-101154-spwalk-boats.jpg)
 
 # Walking as Intersectional
 
@@ -67,9 +72,11 @@ In one of the emails I sent to my collaborator, I wrote the following:
 
 >One's location on the landscape is not just a physical point. It's an intersection where norms, history, gender, and other social categories converge. In short, the walking method is inescapably intersectional. When I'm standing at the intersection of Espino Street and Mondonedo Street inside UPLB, I see artifacts of colonialism (Baker Hall and the half of Freedom Park surrounding the fertility tree). This was once the Japanese internment camp. And yet today, the same spaces are used for events, and people go here for recreation. So, these spaces are socio-historical. Even when walking alone, I'm never truly by myself. I'm surrounded by reminders of the past, which now bring reconstructed meanings and new narratives we've attached to them. When I walk in these spaces, I cut through their meanings with my own multiple layers of meaning: my gender, my multiple disabilities, my spiritual and religious background, my regional identity, etc. So, a writer who chooses a walking method can never escape these layers and intersections. Even if they don't write explicitly about these subjects, since they walk on multi-layered grounds, they must consider them at least while executing their project. But this also means that since walking is rigorously intersectional, a work borne through it will most likely be complex, which warrants a multi-layered reading. Our letters can never be about one thing.
 
+![A group of people cleaning the side of the road with brooms](essays/images/20231209-084133-rxg-community-cleanup.jpg)
+
 # Things Become Other Things
 
-If you've been reading me for a while, you'll notice that I often reference [[thoughts/craig mod|Craig Mod]]. While I've been playing around with writing and photography throughout my 20s and I've been a walker for as long as I can remember, Craig's work introduced me to the possibility of combining writing, photography, and walking into a single art practice. I've studied his work closely in the past three years by reading as many of his newsletters as I could manage, studying his systems and practices as a member of his Special Projects membership program, and reading his first book *[[literature/kissa by kissa mod|Kissa by Kissa]]*.
+If you've been reading me for a while, you'll notice that I often reference [[thoughts/craig mod|Craig Mod]]. While I've been playing around with writing and photography throughout my 20s and I've been a walker for as long as I can remember, Craig's work introduced me to the possibility of combining writing, photography, and walking into a single art practice. I wrote about [[essays/good art reorganizes your world|how I encountered him back in 2021]]. I've studied his work closely in the past three years by reading as many of his newsletters as I could manage, studying his systems and practices as a member of his [Special Projects membership program](https://craigmod.com/membership/), and reading his first book *[[literature/kissa by kissa mod|Kissa by Kissa]]*.
 
 This December, Craig released the first edition of his second book *[[literature/things become other things mod|Things Become Other Things]]*. I read Craig primarily to study craft (vignette writing, photography, and text + image juxtaposition), and this is what I did for a good chunk of December, particularly the last week before Christmas. Every morning, I spent a couple of hours reading a few chapters and taking note of a few things I learned.
 
@@ -89,3 +96,5 @@ Here's a sample of one of his shorter vignettes, which illustrates the formula:
 >As a kid, the whole world felt preordained, immutable. Everything about the old town simply was, always had been, and always would be. There was no old town without Bryan. Of *course* he was there. Of *course* we met. This was the way it was meant to happen. Some God of airplane engine factories ordained it, and thus from the tobacco fields we rose.
 
 Overall, TBOT was a beautiful and instructive book to read, and anyone who aspires to write about and through walking would find it an excellent addition to their library. It gave me some ideas on how to approach my walking projects moving forward, including a book about my walks in Los Baños, which I hope to start writing this 2024, and a walk around Baguio City, which I plan on doing a few days from now.
+
+![A blue book on a wooden tray](essays/images/tbot-cover-flat.jpg)
