--- a/content/essays/uman 2023-07.md
+++ b/content/essays/uman 2023-07.md
@@ -14,9 +14,9 @@ tags:
 
 ![Girls in uniform](essays/images/girls-in-uniform.jpg)
 
-A walk on the afternoon of [[daily notes/2023-07-12|July 12]] made me realize that [[thoughts/my morning writing practice|my morning writing practice]] was too important to exchange for some time to make money in the morning. This realization led me to review my writing life in general, including my systems and routines and evaluate them against my creative goals. I wanted to check whether my current writing practice is leading me towards my goals. The result was a better articulation of [[thoughts/my poetics|my poetics]]. While going through this process I remembered that what I truly wanted to write is [[thoughts/lyrical philosophy|lyrical philosophy]]—words that combine the beauty of the poem and the depth of philosophical inquiry. Thus, I articulated [[thoughts/how to practice and write lyrical philosophy|how to practice and write lyrical philosophy]].
+A walk on the afternoon of [[daily notes/2023-07-12|July 12]] made me realize that [[thoughts/my morning writing practice|my morning writing practice]] was too important to exchange for some time to make money in the morning. This realization led me to review my writing life in general, including my systems and routines and evaluate them against my creative goals. I wanted to check whether my current writing practice is leading me toward my goals. The result was a better articulation of [[thoughts/my poetics|my poetics]]. While going through this process I remembered that what I truly wanted to write is [[thoughts/lyrical philosophy|lyrical philosophy]]—words that combine the beauty of the poem and the depth of philosophical inquiry. Thus, I articulated [[thoughts/how to practice and write lyrical philosophy|how to practice and write lyrical philosophy]].
 
-So, this July, I got some more writing done. While making significant progress in the current website design and development projects I am doing for two clients, both of which are ready to launch, I was also able to produce some work.
+So, this July, I got some more writing done. While making significant progress in the current website design and development projects I'm doing for two clients, both of which are ready to launch, I was also able to produce some work.
 
 Some of my favorite writings this month include the walk poem drafts:
 - [[poems/walk poem 1|Walk Poem 1]]
@@ -35,7 +35,7 @@ Lastly, I added my essay [[essays/a never-ending walk|A Never-ending Walk]] in [
 
 The best books I read this month were:
 - [[thoughts/isang taong maghapon by paolo tiausas|Isang Taong Maghapon by Paolo Tiausas]]
-- [[thoughts/inahan sa sugilanon by louise far|Inahan sa Sugilanon by Louise Far]]
+- [[literature/inahan sa sugilanon by louise far|Inahan sa Sugilanon by Louise Far]]
 
 I also re-read [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]] to study the poems closely. I'll be sharing my notes on the site soon.
 
