--- a/content/essays/uman 2022-07.md
+++ b/content/essays/uman 2022-07.md
@@ -20,7 +20,7 @@ I have decided to simplify (again) my newsletter writing system, so I can focus 
 - My other newsletter, [Lilim](tags/lilim), will be integrated into [Uman](tags/uman). This means that all future Lilim issues will be linked to Uman. Managing one newsletter is more straightforward than two.
 - Uman will continue to be sent monthly but in a simpler format. Instead of spending four days and more piecing together a narrative of my past month, I will be using Uman to share links to changes I made to my [website](https://vinceimbat.com/), which mainly include writing progress I have made in my forest garden. I'll be linking to notes about what I am referring to as my "forest garden of the mind" in the next Uman issue, but for now, you can go around my [website](https://vinceimbat.com/) and poke around its design to get an idea of what I am talking about.
 
-With that out of the way, let's get right into the July issue of Uman. Uman, the Pangasinan word for "change," documents the monthly changes I go through as I walk [[The long walk|The long walk]] of life. It serves as a cairn to the journey, marking where I have been in both geographic and intellectual excursions for an entire month.
+With that out of the way, let's get right into the July issue of Uman. Uman, the Pangasinan word for "change," documents the monthly changes I go through as I walk [[thoughts/the long walk|The long walk]] of life. It serves as a cairn to the journey, marking where I have been in both geographic and intellectual excursions for an entire month.
 
 Here is July 2022's cairn.
 
