--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -64,3 +64,4 @@ draft: true
 [[2023-12-31]]: Genre-less writing; 2024 as the year to write the book about LB; Reflections on the nagging mom outside my window
 
 [[2024-01-01]]: The first day of 2024
+[[daily notes/2024-01-08|2024-01-08]]: [[projects/baguio walk/baguio walk|baguio walk]] initial plan
