--- a/content/essays/uman 2023-11.md
+++ b/content/essays/uman 2023-11.md
@@ -3,6 +3,7 @@ title: 𝌡 Uman — November 2023
 date: 2023-12-02
 tags:
   - evergreens
+  - uman
 draft: false
 ---
 ![An island](essays/images/island.jpg)
