--- a/content/essays/uman 2023-12.md
+++ b/content/essays/uman 2023-12.md
@@ -3,6 +3,7 @@ title: 𝌡 Uman — December 2023
 date: 2024-01-02
 tags:
   - evergreens
+  - uman
 draft: false
 ---
 ![White camp houses under trees behind a grass field](essays/images/20231210-083712-rxg-camp-houses.jpg)
