--- a/content/thoughts/2023-11-22 seeds.md
+++ b/content/thoughts/2023-11-22 seeds.md
@@ -4,7 +4,7 @@ date: 2023-11-22
 tags:
   - seeds
 ---
-- [[projects/roots x gravel/roots x gravel|roots x gravel]]
+- [[project archives/roots x gravel/roots x gravel|roots x gravel]]
 
 # Sauntering LB (SLB) - Walk 1
 
