--- a/content/thoughts/2022-10-05 seeds.md
+++ b/content/thoughts/2022-10-05 seeds.md
@@ -1,15 +1,15 @@
 ---
-title: "2022-10-05 seeds"
-date: "2022-10-05"
+title: 2022-10-05 seeds
+date: 2022-10-05
+aliases:
+  - 2022-10-05 seeds
 tags:
-
-- "seeds"
+  - seeds
 ---
-
 At first, you may not need purpose
 - Connect here Tiago Forte's don't enforce a purpose.
 - Connect here Steve Jobs' quote (stolen by AK) about connecting by looking backwards.
 - Connect divergence-convergence and why we diverge first then converge at the last minute when we know everything already.
 - Related too: skepticism, not hasty to committing.
 
-Dont struggle and worry about the form. Worry more about the "ethics." The how to live.
+Don't struggle and worry about the form. Worry more about the "ethics." The how to live.
