--- a/content/thoughts/2020-10-28 seeds.md
+++ b/content/thoughts/2020-10-28 seeds.md
@@ -1,10 +1,11 @@
 ---
-title: "2020-10-28 seeds"
-date: "2020-10-28"
+title: 2020-10-28 seeds
+date: 2020-10-28
+aliases:
+  - 2020-10-28 seeds
 tags:
-- "seeds"
+  - seeds
 ---
-
 Pm
 
 5:38
