--- a/content/thoughts/2024-01-21 seeds.md
+++ b/content/thoughts/2024-01-21 seeds.md
@@ -1,9 +1,13 @@
+---
+title: 2024-01-21 seeds
+date: 2024-01-21
+tags:
+  - seeds
+---
 The things that I watch no matter how quick or small, even profiles I follow, whatever my attention puts into should help me be the person I want to be.
 
 Mornings should be religious and writing practice
 
-The question is: How to combine spirituality and writing into a daily practice that can really make a difference.
-
-Watch/listen to
+The question is: How to combine spirituality and writing into a daily practice that can really make a difference?
 
 What is the role of the spiritual, religious, and even philosophically inclined person in a world noisy of bad things happening to people? To remind us that despite the bad things happening in the planet, there is the undeniable mystery of how all of this began in the first place. And sometimes, a remebering of this mystery serves us as we go through the day to day issues of modern life.
